add caseInsensitive information to mapped endpoints